Polishing up and bug squashes.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,6 +22,14 @@ button {
   border-bottom-right-radius: 3px;
 }
 
+/* Removes the glow from the given elements in Safari and Chrome */
+textarea,
+select,
+input,
+button {
+  outline: none;
+}
+
 /* Define navbar, navbar display, color, and shadow */
 .navbar {
   background: linear-gradient(90deg, rgba(35, 35, 35, 1) 0%, rgba(56, 56, 56, 1) 100%);
@@ -374,6 +382,13 @@ button {
   /* align-items: center; */
 }
 
+.launch-0 {
+  height: 0px;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+}
+
 .launch__header {
   position: relative;
   z-index: 10;
@@ -383,7 +398,7 @@ button {
   grid-row: 1 / 2;
 
   display: grid;
-  grid-template-columns: 3fr 2fr 80px;
+  grid-template-columns: calc(60% - 80px) 40% 80px;
   grid-template-rows: 48px 32px;
   align-items: center;
 }
@@ -722,10 +737,17 @@ footer {
     grid-template-rows: 60px 360px;
   }
 
+  .launch-0 {
+    height: 0px;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+  }
+
   .launch__header {
     overflow: hidden;
 
-    grid-template-columns: 1fr 60px;
+    grid-template-columns: calc(100% - 60px) 60px;
     grid-template-rows: 100%;
   }
 
@@ -736,6 +758,8 @@ footer {
 
   .launch__text {
     margin: 6% 0 0 3%;
+    /* ? Should overflow text scroll or have ellipses */
+    /* overflow-x: scroll; */
 
     font-size: 20px;
     font-weight: 200;
@@ -807,8 +831,11 @@ footer {
     padding: 3px 0 3px 5px;
     background-color: #c7c6c6;
     border-radius: 3px;
+    overflow-x: scroll;
+    white-space: nowrap;
 
     font-size: 16px;
+    font-weight: 200;
   }
 
   .launch__name--mobile {
